Try harder to prevent jump of background content to the right
Closes #11

--- a/css/main.css
+++ b/css/main.css
@@ -640,7 +640,11 @@ html {
   overflow-y: scroll;
 }
 
+.has-overlay {
+  height: 100%;
+}
 .has-overlay > body {
+  height: 100%;
   overflow-y: hidden;
 }
 
